<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.ForgotPasswordFragment">


    <TextView
        android:id="@+id/forgotPassF_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="70dp"
        android:text="@string/forgotPassF_forgotPass"
        android:fontFamily="@font/roboto_medium"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgotPassF_edt_usernameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/loginF_edtUsername_width"
        android:layout_height="@dimen/loginF_edtUsername_height"
        app:layout_constraintTop_toTopOf="@+id/forgotPassF_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="100dp"
        app:boxCornerRadiusTopStart="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusTopEnd="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusBottomEnd="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusBottomStart="@dimen/loginF_edtUsername_radius"
        app:boxStrokeColor="@color/blue_icon"
        android:hint="@string/loginF_username"
        app:hintTextColor="@color/gray_text"
        app:startIconDrawable="@drawable/login_user"
        app:startIconTint="@color/blue_icon"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotPassF_edt_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgotPassF_edt_questionPassLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/loginF_edtUsername_width"
        android:layout_height="@dimen/loginF_edtUsername_height"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassF_edt_usernameLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="48dp"
        app:boxCornerRadiusTopStart="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusTopEnd="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusBottomEnd="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusBottomStart="@dimen/loginF_edtUsername_radius"
        app:boxStrokeColor="@color/blue_icon"
        android:hint="@string/registerF_questionPass"
        app:hintTextColor="@color/gray_text"
        app:startIconDrawable="@drawable/quetion_pass"
        app:startIconTint="@color/blue_icon"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotPassF_edt_questionPass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/forgotPassF_cardView_check"
        android:layout_width="@dimen/loginF_btnLogin_width"
        android:layout_height="@dimen/loginF_btnLogin_height"
        app:layout_constraintTop_toBottomOf="@id/forgotPassF_edt_questionPassLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="90dp"
        app:cardCornerRadius="@dimen/loginF_btnLogin_radius"
        android:backgroundTint="@color/blue_login" >
        <TextView
            android:id="@+id/forgotPassF_tv_check"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/forgotPassF_check"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/loginF_btnLogin_textSize"
            android:fontFamily="@font/roboto_regular"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/forgotPassF_tv_checkLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassF_cardView_check"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/registerF_checkLogin"
        android:layout_marginTop="160dp"
        android:gravity="center"
        android:textColor="@color/gray_text"
        android:textSize="@dimen/loginF_tvCheckRes_textSize"
        android:fontFamily="@font/roboto_medium"/>

    <TextView
        android:id="@+id/forgotPassF_tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassF_tv_checkLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/registerF_login"
        android:layout_marginTop="@dimen/loginF_tvRes_marginTop"
        android:gravity="center"
        android:textColor="@color/blue_icon"
        android:textSize="@dimen/loginF_tvRes_textSize"
        android:fontFamily="@font/roboto_medium"/>


    <TextView
        android:id="@+id/forgotPassF_tv_resetpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="70dp"
        android:text="@string/forgotPassF_resetPass"
        android:fontFamily="@font/roboto_medium"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:visibility="invisible"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgotPassF_edt_passNewLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/loginF_edtUsername_width"
        android:layout_height="@dimen/loginF_edtUsername_height"
        app:layout_constraintTop_toTopOf="@+id/forgotPassF_tv_resetpass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="100dp"
        app:boxCornerRadiusTopStart="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusTopEnd="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusBottomEnd="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusBottomStart="@dimen/loginF_edtUsername_radius"
        app:boxStrokeColor="@color/blue_icon"
        android:hint="@string/forgotPassF_passNew"
        app:hintTextColor="@color/gray_text"
        app:startIconDrawable="@drawable/login_password"
        app:startIconTint="@color/blue_icon"
        android:visibility="invisible"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotPassF_edt_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgotPassF_edt_comfirmPassNewLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/loginF_edtUsername_width"
        android:layout_height="@dimen/loginF_edtUsername_height"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassF_edt_passNewLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="48dp"
        app:boxCornerRadiusTopStart="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusTopEnd="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusBottomEnd="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusBottomStart="@dimen/loginF_edtUsername_radius"
        app:boxStrokeColor="@color/blue_icon"
        android:hint="@string/forgotPassF_comfirmPassNew"
        app:hintTextColor="@color/gray_text"
        app:startIconDrawable="@drawable/login_password"
        app:startIconTint="@color/blue_icon"
        android:visibility="invisible"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotPassF_edt_comfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/forgotPassF_cardView_comfirm"
        android:layout_width="@dimen/loginF_btnLogin_width"
        android:layout_height="@dimen/loginF_btnLogin_height"
        app:layout_constraintTop_toBottomOf="@id/forgotPassF_edt_comfirmPassNewLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="90dp"
        app:cardCornerRadius="@dimen/loginF_btnLogin_radius"
        android:backgroundTint="@color/blue_login"
        android:visibility="invisible">
        <TextView
            android:id="@+id/forgotPassF_tv_comfirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/forgotPassF_comfrim"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/loginF_btnLogin_textSize"
            android:fontFamily="@font/roboto_medium"/>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>