<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_background"
    tools:context=".Fragment.RegisterFragment">


    <TextView
        android:id="@+id/registerF_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/registerF_createAcc"
        android:fontFamily="@font/roboto_medium"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerF_edt_usernameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/loginF_edtUsername_width"
        android:layout_height="@dimen/loginF_edtUsername_height"
        app:layout_constraintTop_toTopOf="@+id/registerF_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        app:boxCornerRadiusTopStart="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusTopEnd="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusBottomEnd="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusBottomStart="@dimen/loginF_edtUsername_radius"
        app:boxStrokeColor="@color/blue_icon"
        android:hint="@string/loginF_username"
        android:textColorHint="@color/gray_text"
        app:startIconDrawable="@drawable/login_user"
        app:startIconTint="@color/blue_icon"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerF_edt_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textColor="@color/black"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerF_edt_nameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/loginF_edtUsername_width"
        android:layout_height="@dimen/loginF_edtUsername_height"
        app:layout_constraintTop_toBottomOf="@+id/registerF_edt_usernameLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        app:boxCornerRadiusTopStart="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusTopEnd="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusBottomEnd="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusBottomStart="@dimen/loginF_edtUsername_radius"
        app:boxStrokeColor="@color/blue_icon"
        android:hint="@string/registerF_name"
        android:textColorHint="@color/gray_text"
        app:startIconDrawable="@drawable/login_user"
        app:startIconTint="@color/blue_icon"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerF_edt_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textColor="@color/black"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerF_edt_phoneLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/loginF_edtUsername_width"
        android:layout_height="@dimen/loginF_edtUsername_height"
        app:layout_constraintTop_toBottomOf="@+id/registerF_edt_nameLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        app:boxCornerRadiusTopStart="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusTopEnd="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusBottomEnd="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusBottomStart="@dimen/loginF_edtUsername_radius"
        app:boxStrokeColor="@color/blue_icon"
        android:hint="@string/registerF_phone"
        android:textColorHint="@color/gray_text"
        app:startIconDrawable="@drawable/phone"
        app:startIconTint="@color/blue_icon"
        app:prefixText="+84"
        app:prefixTextColor="@color/black"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerF_edt_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:textColor="@color/black"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerF_edt_passLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/loginF_edtUsername_width"
        android:layout_height="@dimen/loginF_edtUsername_height"
        app:layout_constraintTop_toBottomOf="@+id/registerF_edt_phoneLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        app:boxCornerRadiusTopStart="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusTopEnd="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusBottomEnd="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusBottomStart="@dimen/loginF_edtUsername_radius"
        app:boxStrokeColor="@color/blue_icon"
        android:hint="@string/loginF_password"
        android:textColorHint="@color/gray_text"
        app:startIconDrawable="@drawable/login_password"
        app:startIconTint="@color/blue_icon"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerF_edt_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerF_edt_comfirmPassLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/loginF_edtUsername_width"
        android:layout_height="@dimen/loginF_edtUsername_height"
        app:layout_constraintTop_toBottomOf="@+id/registerF_edt_passLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        app:boxCornerRadiusTopStart="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusTopEnd="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusBottomEnd="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusBottomStart="@dimen/loginF_edtUsername_radius"
        app:boxStrokeColor="@color/blue_icon"
        android:hint="@string/registerF_comfirmPass"
        android:textColorHint="@color/gray_text"
        app:startIconDrawable="@drawable/login_password"
        app:startIconTint="@color/blue_icon"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerF_edt_comfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerF_edt_questionPassLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/loginF_edtUsername_width"
        android:layout_height="@dimen/loginF_edtUsername_height"
        app:layout_constraintTop_toBottomOf="@+id/registerF_edt_comfirmPassLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        app:boxCornerRadiusTopStart="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusTopEnd="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusBottomEnd="@dimen/loginF_edtUsername_radius"
        app:boxCornerRadiusBottomStart="@dimen/loginF_edtUsername_radius"
        app:boxStrokeColor="@color/blue_icon"
        android:hint="@string/registerF_questionPass"
        android:textColorHint="@color/gray_text"
        app:startIconDrawable="@drawable/quetion_pass"
        app:startIconTint="@color/blue_icon"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerF_edt_questionPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/registerF_cardView_register"
        android:layout_width="@dimen/loginF_btnLogin_width"
        android:layout_height="@dimen/loginF_btnLogin_height"
        app:layout_constraintTop_toBottomOf="@id/registerF_edt_questionPassLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="@dimen/loginF_btnLogin_radius"
        android:backgroundTint="@color/blue_login" >
        <TextView
            android:id="@+id/registerF_tv_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/registerF_register"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/loginF_btnLogin_textSize"
            android:fontFamily="@font/roboto_medium"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/registerF_tv_checkLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/registerF_cardView_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/registerF_checkLogin"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:textColor="@color/gray_text"
        android:textSize="@dimen/loginF_tvCheckRes_textSize"
        android:fontFamily="@font/roboto_medium"/>

    <TextView
        android:id="@+id/registerF_tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/registerF_tv_checkLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/registerF_login"
        android:layout_marginTop="@dimen/loginF_tvRes_marginTop"
        android:gravity="center"
        android:textColor="@color/blue_icon"
        android:textSize="@dimen/loginF_tvRes_textSize"
        android:fontFamily="@font/roboto_medium"/>

</androidx.constraintlayout.widget.ConstraintLayout>